--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,20 +3,21 @@
 %head
 	%title Musky Forum
 	= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
+	%link{rel: "stylesheet", href: "http://fonts.googleapis.com/css?family=Source+Code+Pro:400,600,700,300", type: "text/css"}
+	%link{rel: "stylesheet", href: "https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css", type: "text/css"}
+	
 	= javascript_include_tag 'application', 'data-turbolinks-track' => true
 	= csrf_meta_tags
 %body
-	%header.main_header
-		#logo
-			%p Welcome 
-			%p= @user.email
-
-
-		#buttons
-			= link_to "New Post", new_post_path
+	%header.main_header.clearfix
+		.wrapper
+			#logo
+				%p= link_to "Musky Forum", root_path
+			#buttons
+				= link_to "New Post", new_post_path
 
 	.wrapper
 		%p.notice= notice
 		%p.alert= alert
 	.wrapper
-		= yield
+		= yield  
