--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,20 +4,19 @@
 	%title Musky Forum
 	= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
 	%link{rel: "stylesheet", href: "http://fonts.googleapis.com/css?family=Source+Code+Pro:400,600,700,300", type: "text/css"}
-
-	
 	= javascript_include_tag 'application', 'data-turbolinks-track' => true
 	= csrf_meta_tags
+
 %body
 	%header.main_header.clearfix
 		.wrapper
 			#logo
 				%p= link_to "Musky Forum", root_path
 			#buttons
-				= link_to "New Post", new_post_path
+				- if user_signed_in?
+					= link_to "New Post", new_post_path
+	.wrapper
+		= yield  
 
 	.wrapper
 		%p.notice= notice
-		%p.alert= alert
-	.wrapper
-		= yield  
