--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,5 +9,9 @@
     <%= f.input :password_confirmation, required: true %>
   </div>
 
+  <div class="form-actions">
+    <%= f.button :submit, "Sign up" %>
+  </div>
+<% end %>
 
 <%= render "devise/shared/links" %>
