--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -96,10 +96,28 @@
 			font-weight: 100;
 			margin: 0;
 		}
-
+		
 		.date {
+			width: 40%;
+			display: inline-block;
 			margin-top: .25rem;
 			font-size: .9rem;
+			
+		}
+
+		@media (max-width: 40em) {
+			.date {
+				width: 100%;
+				display: inline-block;
+				margin-top: .25rem;
+				font-size: .9rem;
+				
+			}
+		}
+
+		.count {
+			float: right;
+			display: inline-block;
 		}
 	}
 }
