--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -1,6 +1,11 @@
 .comment
-	%p= comment.comment
-	%p= comment.user.email
+	= comment.user.email
+	= time_ago_in_words(comment.created_at)
+	ago
+	
+	- if comment.user == current_user
+		= link_to "Delete", [comment.post, comment], method: :delete, data: { confirm: "Are you sure?"}
+		= link_to "Edit", edit_post_comment_path(comment.post, comment)
 
-	= link_to "Edit", edit_post_comment_path(comment.post, comment)
-	= link_to "Delete", [comment.post, comment], method: :delete, data: { confirm: "Are you sure?"}
+
+	%p= comment.comment
