--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,14 +1,17 @@
-%h1= @post.title
-%p= @post.content
+.post_show
+	%h1= @post.title
+	%p= simple_format(@post.content)
+
+	- if @post.user == current_user
+		= link_to "Delete", post_path(@post), method: :delete, data: { confirm: "Are you sure you want to delete this post?" }
+		= link_to "Edit", edit_post_path(@post)
 
 #comments
-	%h2= @post.comments.count
+	%h2
+		= @post.comments.count
+		Comments
 	= render @post.comments
 
-	%h3 Reply to thread
 	= render "comments/form"
 
-= link_to "Edit", edit_post_path(@post)
-= link_to "Delete", post_path(@post), method: :delete, data: { confirm: "Are you sure you want to delete this post?" }
 
-= link_to "Home", root_path
