--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -143,6 +143,58 @@
 	}
 }
 
+
+.post_form {
+
+	a {
+		color: #595959;
+	}
+
+	a:hover, a:active {
+		color: black;
+	}
+	
+	#post_title {
+		background-color: #f3f3f3;
+		float: none;
+		display: block;
+		margin-bottom: 1rem;
+		height: 2rem;
+		width: 40%;
+		color: black;
+	}
+
+
+	input {
+		background-color: #444444;
+	    border: none;
+	    color: #f3f3f3;
+	    float: right;
+	    padding-right: 1rem;
+	    margin-bottom: 2rem;
+	    border-radius: .2em;
+	}
+
+	input:hover {
+		color: #0094ff;
+	}
+
+	textarea {
+		background-color: #f3f3f3;
+		width: 100%;
+		min-height: 20rem;
+		border-radius: .2em;
+		padding: 0;
+		margin-bottom: .5rem;
+	}
+
+	label {
+		padding-bottom: .5rem;
+		display: block;
+	}
+}
+
+
 #comments {
 	.comment {
 
@@ -174,7 +226,7 @@
 	textarea {
 		background-color: #f3f3f3;
 		width: 100%;
-		min-height: 100px;
+		min-height: 6rem;
 		border-radius: .2em;
 		padding: 0;
 	}
@@ -186,6 +238,7 @@
 	    float: right;
 	    padding-right: 1rem;
 	    margin-bottom: 2rem;
+	    margin-top: .5rem;
 	}
 
 	input:hover, input:active {
