--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,14 +16,46 @@
 
  body {
  	font-family: 'Source Code Pro', sans-serif ;
- 	background-color: #444444;
+ 	background-color: #444444 !important;
 
  	a {
  		text-decoration: none;
  		color: #0094ff;
  	}
 
+ 	#container {
+ 		background-color: #444444 !important;
+ 		height: 100%;
+
+ 		.open-menu {
+			background-image: image-url("tusky_white.png");
+			background-size: 40px 40px;
+			background-repeat: no-repeat;
+ 			float: right;
+ 			cursor: pointer;
+
+ 			height: 40px;
+ 			width: 40px;
+			margin: .5rem;
+ 		}
+
+ 		.open-menu:hover, .open-menu:active {
+ 			background-image: image-url("tusky_blue.png");
+ 		}
+		
+		/*Fix to hide SecretNav elements */
+ 		nav {
+
+ 			a {
+ 				display: none;
+ 			}
+ 		}
+ 	}
  }
+
+.current {
+	text-decoration: underline !important;
+}
 
 .wrapper {
 	width: 80%;
@@ -59,12 +91,20 @@
 	#buttons {
 		a {
 			color: #f3f3f3;
+			background-color: #444444;
 			display: inline-block;                       
 			float: right;
 			line-height: 20px;
-			background-color: #444444;
 			padding: .5em 1em;
 			margin: .6rem 1rem;
+			border: 1px solid #444444;
+			box-sizing: border-box;
+    		-moz-box-sizing: border-box;
+    		-webkit-box-sizing: border-box;
+		}
+
+		a:hover {
+			border: 1px solid #f3f3f3;
 		}
 	}
 }
