--- a/app/views/posts/edit.html.haml
+++ b/app/views/posts/edit.html.haml
@@ -4,3 +4,8 @@
 	= render 'form'
 
 	= link_to "Cancel", post_path
+
+%nav
+	%a{href: "/", class: "current"} Forum
+	%a{href: "/about"} About
+	%a{href: "/"} ???
