--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,10 +1,16 @@
 .post_show
+	
 	%h1= @post.title
 	%p= simple_format(@post.content)
 
 	- if @post.user == current_user
 		= link_to "Delete", post_path(@post), method: :delete, data: { confirm: "Are you sure you want to delete this post?" }
 		= link_to "Edit", edit_post_path(@post)
+
+	- if @post.image.exists?
+		= image_tag @post.image.url(:large)
+
+	
 
 #comments
 	%h2
@@ -15,3 +21,7 @@
 	= render "comments/form"
 
 
+%nav
+	%a{href: "/", class: "current"} Forum
+	%a{href: "/about"} About
+	%a{href: "/"} ???
