Update youtube vid to HTTPS

--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -1,4 +1,4 @@
-%iframe{:allowscriptaccess => "always", :allowFullScreen => "true", :frameborder => "0", :height => "430", :src => "http://www.youtube.com/embed/yzF-drvzpso", :title => "YouTube video player", :width => "640"}
+%iframe{:allowscriptaccess => "always", :allowFullScreen => "true", :frameborder => "0", :height => "430", :src => "https://www.youtube.com/embed/yzF-drvzpso", :title => "YouTube video player", :width => "640"}
 
 %nav
 	%a{href: "/"} Forum
