--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
 %head
 	%title Musky Forum
 	= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
-	%link{rel: "stylesheet", href: "http://fonts.googleapis.com/css?family=Source+Code+Pro:400,600,700,300", type: "text/css"}
+	%link{rel: "stylesheet", href: "https://fonts.googleapis.com/css?family=Source+Code+Pro:400,600,700,300", type: "text/css"}
 	= javascript_include_tag 'application', 'data-turbolinks-track' => true
 	= csrf_meta_tags
 
